# videoanalyzer

./: .gitignore  CMakeLists.txt
Qt_GUI/: README.md  videoAnalizerGUI.pro  widget.cpp  widget.h  widget.ui
include/: ArgumentParser.hpp  FrameHandler.hpp  HistogramAnalyzer.hpp  VideoAnalyzer.hpp
main/: main.cpp
src/: ArgumentParser.cpp  FrameHandler.cpp  HistogramAnalizer.cpp  VideoAnalyzer.cpp
